@@ -1,5 +1,9 @@
 2001-04-03  Dave Peticolas  <dave@krondo.com>
 
+	* src/gnome/window-register.c: add a Transaction->Invoice item
+
+	* src/engine/Query.c: add GUID predicate
+
 	* src/gnome/dialog-commodity.c: add namespace picker getter.
 	Show "CURRENCY" instead of "ISO4217" when displaying.
 
